--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
