--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db": "json-server data/db.json -p 8000"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "0.17.4",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
