--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "json-server": "0.17.4",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
