--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db": "json-server data/db.json -p 8000"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
