--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
